#Fixed bug right nav overflow title of leftside in case small screen

--- a/src/layout/portfolio/RightSide.css
+++ b/src/layout/portfolio/RightSide.css
@@ -2,7 +2,7 @@
 .iconMenuRight {
   position: absolute;
   right: 50px;
-  top: 60px;
+  top: 30px;
   width: 55px;
   height: 55px;
   border-radius: 50%;
